httprouts/httproute-monitoring.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: monitoring
spec:
  parentRefs:
    - name: farm-gateway
      namespace: default
  hostnames:
    - monitoring.${YOUR_LOAD_BALANCER_IP}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: prometheus-grafana
          port: 80
